2010-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.5

	* debian/*: Similarly updated for new release to Debian

2010-02-07  Romain Francois <francoisromain@free.fr>

	* src/RcppSexp.h: class RcppSexp removed (was deprecated)

	* src/Rcpp/*.h: defaults copy constructors and assignment
	operators have been added for all classes extending RObject.
	Otherwise the compiler generates default versions that circumvent
	the garbage collection management

2010-02-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/functionCallback/newApiExamples.r: Added simpler
	  version using the new API
	* inst/examples/functionCallback/newApiExamples.r: Updated

	* inst/unitTests/runit.RcppVector.R: added test for NA/NaN
	* inst/unitTests/runit.RcppMatrix.R: idem

2010-02-06  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/RObject.h : asFoo methods are deprecated.

	* src/Rcpp/DottedPair.h : using R_len_t instead of int
	to anticipate future changes in R
	* src/Rcpp/VectorBase.h: idem
	* src/DottedPair.cpp: idem
	* src/VectorBase.cpp: idem
	* src/as.cpp: idem

	* src/Rcpp/SimpleVector.h: SimpleVector is now only parameterized
	by the SEXP type. The c type is automatically retrieved using
	the storage_type trait class.

2010-02-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/THANKS: Added in order to show our appreciation

2010-02-04  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/DottedPair.h: code bloat to allow creation of
	DottedPair containing up to 5 objects without variadic templates
	RInside for example needs this.
	* src/Rcpp/Language.h: same
	* src/Rcpp/Pairlist.h: same
	* src/Rcpp/grow.h: same

	* src/Rcpp/internal/wrap.h : one more level of dispatch to
	identify if there needs a cast between the primitive
	iterated over and the target storage type. For example
	size_t needs a cast to be stored in an integer vector. This
	will be useful for the RProtoBuf package with e.g. types like