@@ -35,6 +35,8 @@ namespace Rcpp{
 class CharacterVector : public VectorBase {     
 public:
 
+	class iterator ;
+	
 	/**
 	 * Proxy object that can be used to get or set the value
 	 * a single value of the character vector
@@ -48,6 +50,7 @@ public:
 		 * @param index index 
 		 */
 		StringProxy( CharacterVector& v, int index ) ;
+		StringProxy( const StringProxy& other ) ;
 		
 		/**
 		 * lhs use. Assign the value of the referred element to 
@@ -88,7 +91,7 @@ public:
 		 * element this proxy refers to and convert it to a 
 		 * C string
 		 */
-		operator char*() const ;
+		operator const char*() const ;
 		
 		/**
 		 * Prints the element this proxy refers to to an 
@@ -96,11 +99,46 @@ public:
 		 */
 		friend std::ostream& operator<<(std::ostream& os, const StringProxy& proxy);
 		
+		friend class iterator ;
 	private:
 		CharacterVector& parent; 
 		int index ;
+		inline void move( int n ){ index += n ;}
 	} ;
 
+	class iterator {
+	public:
+		typedef StringProxy& reference ;
+		typedef StringProxy* pointer ;
+		typedef int difference_type ;
+		typedef StringProxy value_type;
+		typedef std::random_access_iterator_tag iterator_category ;
+		
+		iterator( CharacterVector& object, int index );
+		
+		iterator& operator++(); // prefix
+		iterator& operator++(int); // postfix
+		
+		iterator& operator--(); // prefix
+		iterator& operator--(int); // postfix
+		                    
+		iterator operator+(difference_type n) const ;
+		iterator operator-(difference_type n) const ;
+		
+		iterator& operator+=(difference_type n) ;
+		iterator& operator-=(difference_type n) ;
+
+		reference operator*() ;
+		pointer operator->();
+		
+		bool operator==( const iterator& y) ;
+		bool operator!=( const iterator& y) ;
+		difference_type operator-(const iterator& y) ;
+		
+	private:
+		StringProxy proxy ;
+	};
+	
 	/**
 	 * Default constructor. Sets the underlying object to NULL
 	 */
@@ -203,6 +241,10 @@ public:
 	 */
 	StringProxy operator()( const size_t& i, const size_t& j) throw(index_out_of_bounds,not_a_matrix) ;
 
+	inline iterator begin() { return iterator(*this, 0 ) ; }
+	
+	inline iterator end() { return iterator(*this,::Rf_length(m_sexp));}
+	
 	template <typename InputIterator>
 	void assign( InputIterator first, InputIterator last){
 		size_t size = std::distance( first, last ) ;
@@ -223,6 +265,9 @@ public:
 } ;
 
 typedef CharacterVector StringVector ;
+
+std::string operator+( const std::string& x, const CharacterVector::StringProxy& y ) ;
+
 
 } // namespace
 
